--- a/scripts/install
+++ b/scripts/install
@@ -26,7 +26,7 @@ is_public=$YNH_APP_ARG_IS_PUBLIC
 
 app=$YNH_APP_INSTANCE_NAME
 
-disable_media_preview="false"
+disable_media_preview="0"
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
