--- a/scripts/install
+++ b/scripts/install
@@ -56,7 +56,7 @@ ynh_app_setting_set --app=$app --key=disable_media_preview --value=$disable_medi
 ynh_script_progression --message="Finding an available port..." --weight=1
 
 # Find an available port
-port=$(ynh_find_port 9000)
+port=$(ynh_find_port --port=9000)
 ynh_app_setting_set --app=$app --key=port --value=$port
 
 #=================================================
